--- a/examples/WORKSPACE
+++ b/examples/WORKSPACE
@@ -77,7 +77,40 @@ load(
 
 ruby_rules_dependencies()
 
-ruby_register_toolchains()
+# ruby_register_toolchains()
+
+#######################################
+# SWIFT
+#######################################
+
+http_archive(
+    name = "build_bazel_rules_swift",
+    sha256 = "12057b7aa904467284eee640de5e33853e51d8e31aae50b3fb25d2823d51c6b8",
+    url = "https://github.com/bazelbuild/rules_swift/releases/download/1.0.0/rules_swift.1.0.0.tar.gz",
+)
+
+http_archive(
+    name = "swiftformat",
+    sha256 = "f8ecce65f67cbc4e855d2a508e1282018cd7427f2b6bc33c83a3416c227233b4",
+    url = "https://github.com/nicklockwood/SwiftFormat/releases/download/0.49.11/swiftformat_linux.zip",
+    patch_cmds = ["chmod u+x swiftformat_linux"],
+    build_file_content = "filegroup(name = \"swiftformat\", srcs=[\"swiftformat_linux\"], visibility=[\"//visibility:public\"])",
+)
+
+
+load(
+    "@build_bazel_rules_swift//swift:repositories.bzl",
+    "swift_rules_dependencies",
+)
+
+swift_rules_dependencies()
+
+load(
+    "@build_bazel_rules_swift//swift:extras.bzl",
+    "swift_rules_extra_dependencies",
+)
+
+swift_rules_extra_dependencies()
 
 #######################################
 # NIXPKGS
